--- a/IntellectualOwl/IntellectualOwl.csproj
+++ b/IntellectualOwl/IntellectualOwl.csproj
@@ -36,6 +36,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dragablz">
+      <HintPath>packages\Dragablz.0.0.0.83\lib\net45\Dragablz.dll</HintPath>
+    </Reference>
     <Reference Include="FontAwesome.WPF">
       <HintPath>packages\FontAwesome.WPF.4.3.0.2\lib\FontAwesome.WPF.dll</HintPath>
     </Reference>
@@ -80,6 +83,10 @@
     </ApplicationDefinition>
     <Compile Include="AvalonTextEditor.cs" />
     <Compile Include="Tabs.cs" />
+    <Page Include="Styles\MahApps.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
