--- a/IntellectualOwl/packages.config
+++ b/IntellectualOwl/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AvalonEdit" version="5.0.2" targetFramework="net451" />
+  <package id="Dragablz" version="0.0.0.83" targetFramework="net451" />
   <package id="FontAwesome.WPF" version="4.3.0.2" targetFramework="net451" />
   <package id="MahApps.Metro" version="1.0.0.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
