--- a/IntellectualOwl/packages.config
+++ b/IntellectualOwl/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="AvalonEdit" version="5.0.2" targetFramework="net451" />
   <package id="Dragablz" version="0.0.0.83" targetFramework="net451" />
+  <package id="Extended.Wpf.Toolkit" version="2.3" targetFramework="net451" />
   <package id="FontAwesome.WPF" version="4.3.0.2" targetFramework="net451" />
   <package id="MahApps.Metro" version="1.0.0.0" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net451" />
